# django-collab-user-views

./: setup.cfg
collab_user_views/: apps.py  urls.py  views.py
collab_user_views/templates/: 403.html  404.html  500.html
collab_user_views/templates/collab_user_views/: create_space_form.html  dashboard.html  help.html
collab_user_views/templates/collab_user_views/includes/: accessible_spaces.html  created_spaces.html  download_manual.html  manager_stream.html  own_spaces.html  user_stream.html
