[metadata]
name = django_collab_user_views
author = Mattes Sarcander
description = Provides a user dashboard for displaying information outside of Spaces, intended for Django Collab platform.
version = 0.1
url = https:///github.com/Fortschritt/django-collab-user-views
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4